--- a/app/views/international-arrivals/v2/ethnic-group.html
+++ b/app/views/international-arrivals/v2/ethnic-group.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What's their ethnic group?" %}
+{% set pageTitle = "What is your ethnic group?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -13,24 +13,24 @@
         This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
       </span>
     </p>
-  </div> 
+  </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/previous-infection-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals/previous-infection">Back</a>
 {% endblock %}
 
 {% block content %}
-  {% include "includes/gtm-noscript.html" %}
+{% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/international-arrivals/{{version}}/action/ethnic-group-person-1" method="post">
+      <form action="/international-arrivals/{{version}}/action5/ethnic-group" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="ethnic-group-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                What is {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}'s ethnic group?
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                {{pageTitle}}
               </h1>
             </legend>
             <span id="ethnic-group-hint" class="govuk-body">
@@ -38,8 +38,8 @@
             </span>
             <div class="govuk-radios govuk-!-margin-top-6">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-1-person-1" name="ethnic-group-person-1" type="radio" value="Asian or Asian British" {{ checked("ethnic-group-person-1", "Asian or Asian British") }} aria-describedby="asian-british-hint">
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-1-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-1" name="ethnic-group" type="radio" value="Asian or Asian British" {{ checked("ethnic-group", "Asian or Asian British") }} aria-describedby="asian-british-hint">
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-1">
                   <strong>Asian or Asian British</strong>
                 </label>
                 <span id="asian-british-hint" class="govuk-hint govuk-radios__hint">
@@ -47,8 +47,8 @@
                 </span>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-2-person-1" name="ethnic-group-person-1" type="radio" value="Black, African, Black British or Caribbean" {{ checked("ethnic-group-person-1", "Black, African, Black British or Caribbean") }} aria-describedby="black-african-black-british-caribbean-hint">
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-2-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="Black, African, Black British or Caribbean" {{ checked("ethnic-group", "Black, African, Black British or Caribbean") }} aria-describedby="black-african-black-british-caribbean-hint">
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-2">
                   <strong>Black, African, Black British or Caribbean</strong>
                 </label>
                 <span id="black-african-black-british-caribbean-hint" class="govuk-hint govuk-radios__hint">
@@ -56,8 +56,8 @@
                 </span>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-3-person-1" name="ethnic-group-person-1" type="radio" value="Mixed or multiple ethnic groups" {{ checked("ethnic-group-person-1", "Mixed or multiple ethnic groups") }} aria-describedby="mixed-hint">
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-3-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="Mixed or multiple ethnic groups" {{ checked("ethnic-group", "Mixed or multiple ethnic groups") }} aria-describedby="mixed-hint">
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-3">
                   <strong>Mixed or multiple ethnic groups</strong>
                 </label>
                 <span id="mixed-hint" class="govuk-hint govuk-radios__hint">
@@ -65,8 +65,8 @@
                 </span>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-4-person-1" name="ethnic-group-person-1" type="radio" value="White" {{ checked("ethnic-group-person-1", "White") }} aria-describedby="white-hint">
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-4-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="White" {{ checked("ethnic-group", "White") }} aria-describedby="white-hint">
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-4">
                   <strong>White</strong>
                 </label>
                 <span id="white-hint" class="govuk-hint govuk-radios__hint">
@@ -74,24 +74,24 @@
                 </span>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-5-person-1" name="ethnic-group-person-1" type="radio" value="Another ethnic group" {{ checked("ethnic-group-person-1", "Another ethnic group") }} aria-describedby="other-hint">
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-5-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="Another ethnic group" {{ checked("ethnic-group", "Another ethnic group") }} aria-describedby="other-hint">
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-5">
                   <strong>Another ethnic group</strong>
                 </label>
                 <span id="other-hint" class="govuk-hint govuk-radios__hint">
                   Includes any other ethnic group, for example, Arab
                 </span>
               </div>
-  
+
               <div class="govuk-radios__divider">or</div>
-  
+
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ethnic-group-6-person-1" name="ethnic-group-person-1" type="radio" value="Prefer not to say" {{ checked("ethnic-group-person-1", "Prefer not to say") }}>
-                <label class="govuk-label govuk-radios__label" for="ethnic-group-6-person-1">
+                <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="Prefer not to say" {{ checked("ethnic-group", "Prefer not to say") }}>
+                <label class="govuk-label govuk-radios__label" for="ethnic-group-6">
                   Prefer not to say
                 </label>
               </div>
-              
+
             </div>
           </fieldset>
         </div>
