--- a/app/views/international-arrivals/v2/nhs-number.html
+++ b/app/views/international-arrivals/v2/nhs-number.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What's their NHS number?" %}
+{% set pageTitle = "What is the NHS number?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/nhs-number-known-person-1">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/nhs-number-known">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -24,23 +24,23 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/international-arrivals/{{version}}/registered-with-GP-person-1" method="post">
+      <form action="/international-arrivals/{{version}}/address" method="post">
 
-
-        <fieldset class="govuk-fieldset" aria-describedby="nhs-number-person-1-hint">
+        <fieldset class="govuk-fieldset" aria-describedby="nhs-number-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-              What is {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}'s NHS number?
+              {{pageTitle}}
             </h1>
           </legend>
-          <span id="nhs-number-person-1-hint" class="govuk-body">
-            An NHS number is 10 digits, for example 867 406 5600.
+          <span id="nhs-number-hint" class="govuk-body">
+            An NHS number is 10 digits, for example 867 406 5600.<br><br>
+            Enter this number with no spaces.
           </span>
           <div class="govuk-form-group govuk-!-margin-top-5">
-            <label class="govuk-label" for="nhs-number-person-1">
+            <label class="govuk-label" for="nhs-number">
               NHS number
             </label>
-            <input class="govuk-input govuk-input--width-10" id="nhs-number-person-1" name="nhs-number-person-1" type="text" value="{{ data['nhs-number-person-1'] }}">
+            <input class="govuk-input govuk-input--width-10" id="nhs-number" name="nhs-number" type="text" value="{{ data['nhs-number'] }}">
           </div>
         </fieldset>
 
