--- a/app/views/international-arrivals/v2/nhs-number-known.html
+++ b/app/views/international-arrivals/v2/nhs-number-known.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Do you know your NHS number?" %}
+{% set pageTitle = "Do you have an NHS number?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,19 @@
     </p>
   </div>
 
+  {% if data['ethnic-group'] == "Asian or Asian British" %}
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-asian">Back</a>
+  {% elseif data['ethnic-group'] == "Black, African, Black British or Caribbean" %}
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-black">Back</a>
+  {% elseif data['ethnic-group'] == "Mixed or multiple ethnic groups" %}
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-mixed">Back</a>
+  {% elseif data['ethnic-group'] == "White" %}
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-white">Back</a>
+  {% elseif data['ethnic-group'] == "Another ethnic group" %}
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-another">Back</a>
+  {% else %}
   <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-group">Back</a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -35,9 +47,29 @@
             </legend>
             <span id="nhs-number-known-hint" class="govuk-body">
               <strong>This helps us find and update your GP record with your test result.</strong><br><br>
-              An NHS number is 10 digits. It will be on any prescriptions or letters from a GP or hospital.<br><br>
-              <a href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/" target="blank">How to find an NHS number</a><br><br>
-              In Scotland, it’s known as a CHI number. In Northern Ireland, it’s known as an H&C number.<br><br>
+            </span>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  What an NHS number looks like and how to find it
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                An NHS number is 10 digits. It will be on any prescriptions or letters from a GP or hospital.<br><br>
+                <a href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/" target="blank">How to find an NHS number</a>
+              </div>
+            </details>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  What to do if you live in Scotland or Northern Ireland
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                In Scotland, it’s known as a CHI number. In Northern Ireland, it’s known as an H&C number.
+              </div>
+            </details>
+            <span id="nhs-number-known-hint-2" class="govuk-body">
               If you do not have it, you can still continue.
             </span>
             <div class="govuk-radios govuk-radios--conditional govuk-!-padding-top-6" data-module="govuk-radios">
