--- a/app/views/international-arrivals/v2/vaccine.html
+++ b/app/views/international-arrivals/v2/vaccine.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Have you had an approved coronavirus vaccine?" %}
+{% set pageTitle = "Have you had the coronavirus vaccine?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -35,15 +35,9 @@
               </h1>
             </legend>
             <span id="vaccine-hint" class="govuk-body">
-              Only vaccines administered by the NHS, in the EU or in the USA are approved. If you have not been vaccinated by one of these entities please select No
+              Only vaccines given by the NHS, EU or USA are accepted. Otherwise select 'No'.
             </span>
             <div class="govuk-radios govuk-!-margin-top-6">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="vaccine-1" name="vaccine" type="radio" value="No" {{ checked("vaccine", "No") }}>
-                <label class="govuk-label govuk-radios__label" for="vaccine-1">
-                  No
-                </label>
-              </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="vaccine-2" name="vaccine" type="radio" value="Yes, they've had 1 dose" {{ checked("vaccine", "Yes, they've had 1 dose") }}>
                 <label class="govuk-label govuk-radios__label" for="vaccine-2">
@@ -54,6 +48,12 @@
                 <input class="govuk-radios__input" id="vaccine-3" name="vaccine" type="radio" value="Yes, they've had 2 doses" {{ checked("vaccine", "Yes, they've had 2 doses") }}>
                 <label class="govuk-label govuk-radios__label" for="vaccine-3">
                   Yes, they've had 2 doses
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="vaccine-1" name="vaccine" type="radio" value="No" {{ checked("vaccine", "No") }}>
+                <label class="govuk-label govuk-radios__label" for="vaccine-1">
+                  No
                 </label>
               </div>
             </div>
