--- a/app/views/international-arrivals/v2/confirmation.html
+++ b/app/views/international-arrivals/v2/confirmation.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-{% if data['travel-route'] == "green" %}
+<!-- {% if data['travel-route'] == "green" %}
 <div class="proto-action big">
   <a href="/international-arrivals/{{version}}/confirmation-email-green">
     <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Confirmation email</div>
@@ -71,6 +71,6 @@
     <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Confirmation email</div>
   </a>
 </div>
-{% endif %}
+{% endif %} -->
 
 {% endblock %}
