--- a/app/views/international-arrivals/v2/nhs-number-known.html
+++ b/app/views/international-arrivals/v2/nhs-number-known.html
@@ -76,13 +76,19 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="nhs-number-known-1" name="nhs-number-known" type="radio" value="Yes" {{ checked("nhs-number-known", "Yes") }}>
                   <label class="govuk-label govuk-radios__label" for="nhs-number-known-1">
-                    Yes, I do
+                    Yes, I can give you my NHS number
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="nhs-number-known-2" name="nhs-number-known" type="radio" value="No" {{ checked("nhs-number-known", "No") }}>
                   <label class="govuk-label govuk-radios__label" for="nhs-number-known-2">
-                    No, I do not
+                    No, I do not know my NHS number
+                  </label>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="nhs-number-known-3" name="nhs-number-known" type="radio" value="No" {{ checked("nhs-number-known", "No") }}>
+                  <label class="govuk-label govuk-radios__label" for="nhs-number-known-3">
+                    No, I do not have an NHS number
                   </label>
                 </div>
               </div>
