--- a/app/views/international-arrivals/v2/previous-infection.html
+++ b/app/views/international-arrivals/v2/previous-infection.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Have you tested positive before more than 3 months ago?" %}
+{% set pageTitle = "Have you tested positive for COVID-19 more than 3 months ago?" %}
 
 {% extends "includes/layout.html" %}
 
