--- a/app/views/international-arrivals/v2/vaccine.html
+++ b/app/views/international-arrivals/v2/vaccine.html
@@ -39,15 +39,15 @@
             </span>
             <div class="govuk-radios govuk-!-margin-top-6">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="vaccine-2" name="vaccine" type="radio" value="Yes, they've had 1 dose" {{ checked("vaccine", "Yes, they've had 1 dose") }}>
+                <input class="govuk-radios__input" id="vaccine-2" name="vaccine" type="radio" value="Yes, I've had 1 dose" {{ checked("vaccine", "Yes, I've had 1 dose") }}>
                 <label class="govuk-label govuk-radios__label" for="vaccine-2">
-                  Yes, they've had 1 dose
+                  Yes, I've had 1 dose
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="vaccine-3" name="vaccine" type="radio" value="Yes, they've had 2 doses" {{ checked("vaccine", "Yes, they've had 2 doses") }}>
+                <input class="govuk-radios__input" id="vaccine-3" name="vaccine" type="radio" value="Yes, I've had 2 doses" {{ checked("vaccine", "Yes, I've had 2 doses") }}>
                 <label class="govuk-label govuk-radios__label" for="vaccine-3">
-                  Yes, they've had 2 doses
+                  Yes, I've had 2 doses
                 </label>
               </div>
               <div class="govuk-radios__item">
