--- a/app/views/international-arrivals/v2/departure-country.html
+++ b/app/views/international-arrivals/v2/departure-country.html
@@ -39,12 +39,12 @@
                 What country are you arriving in the UK from?
               </h1>
             </legend>
-            <span id="last-country-visited-hint" class="govuk-body">
+            <!-- <span id="last-country-visited-hint" class="govuk-body">
               Country you're coming from (this does not include transfers or stop-offs)<br><br>
-            </span>
+            </span> -->
             <fieldset class="govuk-fieldset">
               <label class="govuk-label" for="country-visited">
-                Country
+                Do not include transfers or stop-offs.
               </label>
               <div id="country-container" name="country-visited"></div>
             </fieldset>
