--- a/app/views/international-arrivals/v2/nhs-number.html
+++ b/app/views/international-arrivals/v2/nhs-number.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What is the NHS number?" %}
+{% set pageTitle = "What is your NHS number?" %}
 
 {% extends "includes/layout.html" %}
 
