--- a/app/views/international-arrivals/v2/travel-route.html
+++ b/app/views/international-arrivals/v2/travel-route.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What test package do you need?" %}
+{% set pageTitle = "What travel package do you need?" %}
 
 {% extends "includes/layout.html" %}
 
