--- a/app/views/international-arrivals/v2/order-summary.html
+++ b/app/views/international-arrivals/v2/order-summary.html
@@ -89,7 +89,8 @@
             1x travel package of 2 tests<br>
             (£210 per person)
             {% else %}
-            £420
+            1x travel package of 1 test<br>
+            (£105 per person)
             {% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
