--- a/app/views/antigen/v2/home-testing/enter-barcode-manual.html
+++ b/app/views/antigen/v2/home-testing/enter-barcode-manual.html
@@ -39,8 +39,8 @@
               It should look like this:
             </span>
             
-            <div class="govuk-!-margin-top-5 govuk-!-margin-bottom-5">
-              <img src="/public/images/barcode-number.png" alt="barcode number"/>
+            <div class="govuk-!-margin-top-5 govuk-!-margin-bottom-5" style="transform: none;">
+              <img src="/public/images/barcode-number.png" alt="barcode number" style="transform: none;" />
             </div>
   
             <div class="govuk-form-group">
