--- a/app/views/international-arrivals/v2/nhs-number.html
+++ b/app/views/international-arrivals/v2/nhs-number.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/nhs-number-known">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/nhs-number-known">Back</a>
 {% endblock %}
 
 {% block content %}
