--- a/app/views/international-arrivals/v2/check-your-answers.html
+++ b/app/views/international-arrivals/v2/check-your-answers.html
@@ -383,7 +383,7 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            GP address
+            Home address
           </dt>
           <dd class="govuk-summary-list__value">
             {{ data['address'] or '5 Souterhead Road' }}<br>
@@ -392,7 +392,7 @@
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/address">
               Change
-              <span class="govuk-visually-hidden">address</span>
+              <span class="govuk-visually-hidden">home address</span>
             </a>
           </dd>
         </div>
