--- a/app/views/international-arrivals-admin/v1/order-tests/nhs-number-known-person-1.html
+++ b/app/views/international-arrivals-admin/v1/order-tests/nhs-number-known-person-1.html
@@ -1,7 +1,7 @@
-{% set version = "v2" %}
+{% set version = "v1" %}
 {% set pageTitle = "Do they have an NHS number?" %}
 
-{% extends "includes/layout.html" %}
+{% extends "includes/layout-intl-arrivals-admin.html" %}
 
 {% block beforeContent %}
   <div class="govuk-phase-banner">
@@ -16,17 +16,17 @@
   </div>
 
   {% if data['ethnic-group-person-1'] == "Asian or Asian British" %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-asian-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-background-asian-person-1">Back</a>
   {% elseif data['ethnic-group-person-1'] == "Black, African, Black British or Caribbean" %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-black-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-background-black-person-1">Back</a>
   {% elseif data['ethnic-group-person-1'] == "Mixed or multiple ethnic groups" %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-mixed-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-background-mixed-person-1">Back</a>
   {% elseif data['ethnic-group-person-1'] == "White" %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-white-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-background-white-person-1">Back</a>
   {% elseif data['ethnic-group-person-1'] == "Another ethnic group" %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-another-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-background-another-person-1">Back</a>
   {% else %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-group-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals-admin/{{version}}/order-tests/ethnic-group-person-1">Back</a>
   {% endif %}
 
 {% endblock %}
@@ -37,7 +37,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/international-arrivals/{{version}}/action/nhs-number-known-person-1" method="post">
+      <form action="/international-arrivals-admin/{{version}}/order-tests/action/nhs-number-known-person-1" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="nhs-number-known-hint nhs-number-known-hint-2">
