--- a/app/views/international-arrivals/v2/check-your-answers-person-1.html
+++ b/app/views/international-arrivals/v2/check-your-answers-person-1.html
@@ -397,7 +397,7 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Home address
+            GP address
           </dt>
           <dd class="govuk-summary-list__value">
             {{ data['address-person-1'] or '5 Souterhead Road' }}<br>
@@ -406,7 +406,7 @@
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/address-person-1">
               Change
-              <span class="govuk-visually-hidden">home address</span>
+              <span class="govuk-visually-hidden">address</span>
             </a>
           </dd>
         </div>
